--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -25,7 +25,7 @@ Personally, I think it does help, that it makes a beneficial difference, but the
 
 %------------------------------------------------------------------------- 
 
-Las competencias genéricas son las habilidades que los profesionales deben ser capaces de desempeñar independientemente de su especialización. Habilidades como el trabajo en equipo, la comunicación interpersonal, la capacidad para resolver problemas, la creatividad o el liderazgo, entre otras, son competencias que las empresas demandan hoy en día en los nuevos titulados, además de las competencias específicas que se les supone por la titulación que hayan terminado. Desde un punto de vista formativo, los profesores deben integrar estas competencias en sus asignaturas, tanto en las clases tradicionales como en los entornos virtuales. Y por supuesto, deben fijar mecanismos no sólo para el desarrollo de estas competencias, sino también para la evaluación de las mismas.
+Las competencias genéricas son las habilidades que los profesionales deben ser capaces de desempeñar independientemente de su especialización. Habilidades como el trabajo en equipo, la comunicación interpersonal, la capacidad para resolver problemas, la creatividad o el liderazgo, entre otras, son competencias que las empresas demandan hoy en día en los nuevos titulados, además de las competencias específicas que se les supone por la titulación que hayan estudiado. Desde un punto de vista formativo, los profesores deben integrar estas competencias en sus asignaturas, tanto en las clases tradicionales como en los entornos virtuales. Y por supuesto, deben fijar mecanismos no sólo para el desarrollo de estas competencias, sino también para la evaluación de las mismas.
 
 Los \emph{entornos virtuales de aprendizaje} (EVA o, del inglés, VLE, virtual learning environment) almacenan información de estudiantes, profesores, cursos, tareas, trabajos, etc. Estos elementos se relacionan y configuran para ofrecer al usuario una experiencia de curso virtual. Estos cursos están en auge hoy en día, siendo el soporte virtual de las clases presenciales o incluso siendo el único medio donde unas clases o un curso se imparten. Las clases virtuales presentan numerosas ventajas con respecto a las clases tradicionales. Por un lado se elimina la limitación geográfica que tienen las clases tradicionales, y por otro lado la oferta y variedad de cursos ofrecidos siempre será mayor. Además, para los estudiantes presentan otras ventajas fundamentales: en primer lugar la flexibilidad de horario, permitiéndoles compatibilizar los estudios con una vida laboral sin renunciar a crecer profesionalmente; y en segundo lugar, les permite estar en contacto permanente con otros estudiantes y profesores mediante diferentes herramientas (foros, chats, ... etc.)~\cite{alAjlan:2008}.
 
@@ -157,7 +157,6 @@ Además de las clasificaciones anteriores, es necesario recoger más informació
 \begin{itemize}
 \item Evaluación del profesor (\emph{teacher assessment}): el profesor evalúa el desempeño de los estudiantes en una o varias competencias genéricas de manera asistida o semi-asistida por el ordenador.
 \item Evaluación entre iguales y autoevaluación (\emph{peer and self-assessment}): uno de los problemas con los que se encuentran los profesores es la escalabilidad de la tarea de evaluación de competencias cuando el grupo de alumnos es grande. En estos trabajos, con el apoyo de la tecnología delegan parte o todo el proceso de evaluación en los estudiantes mediante la autoevaluación o evaluación entre iguales.
-\item Cuestionarios (\emph{questionaries}): en este conjunto de trabajos que automatizan los procesos de evaluación mediante el uso de tests sicológicos orientados a alguna competencia en particular.
 \item Herramientas de evaluación automática (\emph{automatic assessment tools}): en esta rama se recogen trabajos que automatizan el proceso de evaluación de competencias.
 \end{itemize}
 
@@ -167,7 +166,7 @@ En el siguiente capítulo se mostrarán los resultados obtenidos.
 
 \section{Resultados}
 
-A continuación se muestran los resultados del estudio. Comienza el capítulo con la localización de los estudios primarios, para continuar con la extracción de los datos de estudio, mostrándose varios gráficos y/o tablas que justifican la información mostrada. Finalmente se categorizan los estudios y se muestra el esquema de clasificación resultante.
+A continuación se muestran los resultados del estudio. Comienza el capítulo con la localización de los estudios primarios, para continuar con la extracción de los datos de estudio, mostrándose varios gráficos y tablas que justifican la información mostrada. Finalmente se categorizan los estudios y se muestra el esquema de clasificación resultante.
 
 \subsection{Localización de la literatura}
 
@@ -199,7 +198,7 @@ En la tabla \ref{tab:ResumenBusquedaResultados} se muestran las búsquedas reali
 \label{tab:ResumenBusquedaResultados}
 \end{table} 
 
-En total se recopilaron 313 trabajos para ser revisados. El número de estudios primarios resultante (después de aplicar criterios de selección y exclusión) fue de 30 trabajos (menos de un 10\% del total de trabajos recopilados). Aunque hay muchos trabajos que tratan las competencias genéricas desde diferentes perspectivas, son muy pocos los que abordan su evaluación con apoyo de tecnología. Algunos de los trabajos descartados fue preseleccionado a partir de su resumen, pero fue posteriormente descartado al no quedar claro el uso de la tecnología en el proceso de evaluación. Los resultados de esta clasificación pueden verse en la tabla \ref{tab:ResumenSelecccionResultados}. A tenor de los resultados ofrecidos, y sobre todo del número de trabajos descartados, el lector puede pensar que se debieron añadir términos computacionales entre los criterios de búsqueda. Sin embargo, el número de términos informáticos que se podrían añadir a las busquedas es muy amplio y trabajos que han sido recopilados en este trabajo hubieran quedado fuera en ese caso porque hubiera sido imposible tener todos los términos en cuenta.
+En total se recopilaron 313 trabajos para ser revisados. El número de estudios primarios resultante (después de aplicar criterios de selección y exclusión) fue de 30 trabajos (menos de un 10\% del total de trabajos recopilados). Además, 268 trabajos se catalogaron como fuera del tema (\emph{off topic}) ya que aunque  trataban en su mayoría la evaluación de competencias genéricas, no abordaban su evaluación con apoyo de tecnología, o si lo hacían no se indicaba. Los resultados de esta clasificación pueden verse en la tabla \ref{tab:ResumenSelecccionResultados}. A tenor de los resultados ofrecidos, y sobre todo del número de trabajos descartados, el lector puede pensar que se debieron añadir términos computacionales entre los criterios de búsqueda. Sin embargo, el número de términos informáticos que se podrían añadir a las busquedas es muy amplio y trabajos que han sido recopilados en este trabajo hubieran quedado fuera en ese caso porque hubiera sido imposible tener todos los términos en cuenta.
 
 \begin{table}
   \begin{center}
@@ -348,7 +347,7 @@ de evaluar el aprendizaje o competencia desde una visión más global, y las ana
 \item Las \emph{actividades sin determinar} engloban a un conjunto de trabajos en los que se indica que se han evaluado actividades pero no se menciona explícitamente el cómo. Por contexto pueden ser tanto actividades del EVA como actividades presenciales. No se presta atención a cómo son y cómo se evalúan esas actividades en particular, sino a que después se toma la calificación de cada actividad y de una u otra forma se mapea a la evaluación de alguna competencia. Quizás se usen rúbricas, cuestionarios o entrevistas, pero o no se mencionan o si lo hacen no está directamente relacionado con la evaluación de la competencia genérica.
 \item Tests automáticos: Algunos de los tests automáticos que se han encontrado dentro de la bibliografía son tests de personalidad. Este tipo de test está diseñado para revelar aspectos del carácter o mecanismos psicológicos de un individuo. La evaluación de la personalidad se puede ver como la aplicación de procedimientos para medir aspectos de la personalidad de manera que sean aplicables a otros dominios~\cite{wiggins2003paradigms}. Uno de esos dominios es el laboral, sobre todo las entrevistas de trabajo. Es común la necesidad del empresario por conocer la aptitud o no del candidato a un puesto para asumir cierto rol dentro de una empresa. Todas las competencias están relacionadas por tanto con características de los encuestados que sean de interés para los empleadores (trabajo en equipo, responsabilidad, comunicación, habilidades interpersonales, cratividad, gestión de proyectos, liderazgo, resolución de problemas, etc.).
 \item Juegos serios (Serious games): son juegos diseñados para un propósito principal distinto del de la pura diversión~\cite{djaouti2011classifying}. Normalmente, el adjetivo "serio" pretende referirse a productos utilizados por industrias como la de defensa, educación, exploración científica, sanitaria, urgencias, planificación cívica, ingeniería, religión y política~\footnote{http://cs.gmu.edu/~gaia/SeriousGames/index.html}. Los juegos serios son muy utilizados hoy en día en el aula, aunque son más aplicados a competencias específicas que a genéricas. 
-\item Herramientas para el análisis del aprendizaje (Learning analytics tools): El término \emph{Learning Analytics}, traducido al español como análisis del aprendizaje, es definido por la \emph{Society for Learning Analytics} como la medición, recopilación, análisis y presentación de datos sobre los estudiantes, sus contextos y las interacciones que allí se generan, con el fin de comprender el proceso de aprendizaje que se está desarrollando y optimizar los entornos en los que se produce~\cite{siemens2012learning}.
+\item Herramientas para el análisis de los registros de aprendizaje (Learning analytics tools): El término \emph{Learning Analytics}, traducido al español como análisis del aprendizaje, es definido por la \emph{Society for Learning Analytics} como la medición, recopilación, análisis y presentación de datos sobre los estudiantes, sus contextos y las interacciones que allí se generan, con el fin de comprender el proceso de aprendizaje que se está desarrollando y optimizar los entornos en los que se produce~\cite{siemens2012learning}.
 \end{itemize}
 
 \subsubsection{Experiencias}
@@ -666,7 +665,7 @@ En la tabla~\ref{tab:MetodosProfesor} puede ver los instrumentos y experiencias 
 \textbf{Limitaciones}
 \bigskip
 
-La escalabilidad es el problema más mencionado por los autores en los trabajos recopilados. En~\cite{serrano2013hiperion} se diseña \emph{Hiperion}, un sistema de recomendación que ayuda a diseñar actividades adaptadas a cada estudiante para mejorar sus competencias. En el estudio de caso mostrado en este trabajo, los profesores evaluaban las competencias de los estudiantes manualmente y después aplicaban Hiperion. La principal desventaja de la herramienta es el tiempo que el profesor ha de dedicar para asignar los diferentes logros y el peso de cada nota para cada competencia en las actividades. En línea con los problemas de escalabilidad anteriores nos encontramos con el trabajo mostrado en~\cite{lacuesta2009active}. En él se utiliza una metodología ABP, en la que se realiza una evaluación individualizada de cada estudiante y de cada grupo de estudiantes. El autor considera también que el esfuerzo necesario y carga de trabajo para cada profesor es un poco mayor al habitual. Lo mismo ocurre en~\cite{benlloch2007adapting}, trabajo en el los profesores concluyeron que el esfuerzo que realizaron fue excesivo a pesar de los buenos resultados obtenidos y descartaron el uso del portfolio para próximas experiencias ya que les supone una gran carga de trabajo sobre todo en el tramo final del curso.
+La escalabilidad es el problema más mencionado por los autores en los trabajos recopilados. En~\cite{serrano2013hiperion} se diseña \emph{Hiperion}, un sistema de recomendación que ayuda a diseñar actividades adaptadas a cada estudiante para mejorar sus competencias. En el estudio de caso mostrado en este trabajo, los profesores evaluaban las competencias de los estudiantes manualmente y después aplicaban Hiperion. La principal desventaja de la herramienta es el tiempo que el profesor ha de dedicar para asignar los diferentes logros y el peso de cada nota para cada competencia en las actividades. En línea con los problemas de escalabilidad anteriores nos encontramos con el trabajo mostrado en~\cite{lacuesta2009active}. En él se utiliza una metodología ABP, en la que se realiza una evaluación individualizada de cada estudiante y de cada grupo de estudiantes. El autor considera también que el esfuerzo necesario y carga de trabajo para cada profesor es un poco mayor al habitual. Lo mismo ocurre en~\cite{benlloch2007adapting}, trabajo en el que los profesores concluyeron que el esfuerzo que realizaron fue excesivo a pesar de los buenos resultados obtenidos y descartaron el uso del portfolio para próximas experiencias ya que les supone una gran carga de trabajo sobre todo en el tramo final del curso.
 
 \subsubsection{Evaluación automática}
 
@@ -748,9 +747,9 @@ En esta sección se muestran diferentes herramientas para la evaluación automá
     \hline
     \cite{bedek2011behavioral} & Juegos serios & Indicadores basados en logros conseguidos en el juego  \\
     \hline
-    \cite{rayon2014web} & Análisis de los registros de aprendizaje  & Trabajo en herramientas del EVA \\
+    \cite{rayon2014web} & Herramienta para el análisis de los registros de aprendizaje  & Trabajo en herramientas del EVA \\
     \hline
-    \cite{fidalgo:2015} & Análisis de los registros de aprendizaje & Trabajo en herramientas del EVA \\
+    \cite{fidalgo:2015} & Herramienta para el análisis de los registros de aprendizaje & Trabajo en herramientas del EVA \\
     \hline
   \end{tabular}
 \end{center}
@@ -765,7 +764,9 @@ En esta sección se muestran diferentes herramientas para la evaluación automá
 
 La creación de estos tests de personalidad no está al alcance de todos los profesores. Como hemos visto antes en el trabajo presentado en~\cite{andre2011formal}, fue necesario llevar a cabo un modelo Delphi para la definición de los tests.
 
-En \cite{guenaga2013serious} se utilizan los juegos serios para el desarrollo de las competencias de \emph{emprendimiento} y \emph{solución de problemas}. Se definieron una serie de indicadores como medida del desempeño en las competencias que permiten al estudiante conocer su nivel de adquisición de las mismas. En \cite{bedek2011behavioral} también se utilizan los juegos serios para el desarrollo y evaluación de competencias genéricas. Se basa en un modelo donde para cada competencia se identifican subcompetencias más específicas, lo que facilita el proceso de definición de indicadores. Los juegos serios suelen utilizarse con un propósito específico, generalmente relacionado con competencias específicas. Hay muchos trabajos sobre juegos serios en la literatura pero muy poco sobre competencias genéricas. También lo que para un profesor es un indicador del desempeño de competencias genéricas puede que no lo sea para otro, por lo que desarrollar un juego que sirva para todos los profesores es complicado %BUSCAR REFERENCIA
+En \cite{guenaga2013serious} se utilizan los juegos serios para el desarrollo de las competencias de \emph{emprendimiento} y \emph{solución de problemas}. Se definieron una serie de indicadores como medida del desempeño en las competencias que permiten al estudiante conocer su nivel de adquisición de las mismas. En \cite{bedek2011behavioral} también se utilizan los juegos serios para el desarrollo y evaluación de competencias genéricas. Se basa en un modelo donde para cada competencia se identifican subcompetencias más específicas, lo que facilita el proceso de definición de indicadores. Los juegos serios suelen utilizarse con un propósito específico, generalmente relacionado con competencias específicas. Hay muchos trabajos sobre juegos serios en la literatura pero muy poco sobre competencias genéricas. 
+
+%También lo que para un profesor es un indicador del desempeño de competencias genéricas puede que no lo sea para otro, por lo que desarrollar un juego que sirva para todos los profesores es complicado %BUSCAR REFERENCIA
 
 %Volvemos a encontrarnos con problemas de escalabilidad. El profesorado que participó en la experiencia de \cite{} reconoció que tuvieron que dedicar un elevado número de horas, tanto para las clases como para la evaluación de muchos proyectos. Más aun si los cuestionarios constan de preguntas abiertas y cerradas. Las preguntas abiertas obligan al evaluado a formular la respuesta a la pregunta y al evaluador a leerla para corregirla, lo que conlleva una mayor carga de trabajo. En \cite{} se presenta un cuestionario para evaluar el \emph{pensamiento crítico}, la \emph{curiosidad} y la \emph{creatividad}. El cuestionario consta sobre todo de preguntas abiertas, lo que implica tener que dedicar más tiempo y recursos para realizar las evaluaciones. En~\cite{vizcarro2013assessment}, profesores de los grados de Computación y Matemáticas y de Ingeniería Informática elaboraron una prueba escrita para la evaluación de la competencia genérica de \emph{resolución de problemas}. Este constaba de preguntas abiertas y cerradas, siendo minuciosamente seleccionadas por el profesorado que formaba parte en la experiencia, así como las respuestas que se esperarían de los estudiantes. El proyecto fue muy satisfactorio, aunque en las conclusiones vemos que los autores indican que encontrar un equilibrio entre el esfuerzo necesario para desarrollar este tipo de dispositivos de evaluación y la posibilidad de no hacerlo, o hacerlo pero no tan exhaustivamente, es algo que la comunidad académica debe abordar seriamente.
 
@@ -778,7 +779,7 @@ En \cite{guenaga2013serious} se utilizan los juegos serios para el desarrollo de
 
 %En~\cite{rayon2014web} se propone la evaluación de varias competencias genéricas mediante indicadores obtenidos del análisis del proceso de aprendizaje. Para ello utilizan una plataforma web llamada LACAMOLC (\emph{Learning Analytics for Competence Assessment of MObile Learning Contexts}), un panel que da soporte a los procesos de aprendizaje y evaluación proporcionando una perspectiva visual del análisis del aprendizaje mediante la recolección de datos sociales y de uso desde diferentes entornos de aprendizaje como Moodle, Google Apps para la educación y MediaWiki. Mediante LACAMOLC el profesor centraliza todos los indicadores para la evaluación de competencias obteniendo una información cuantitativa y visual. Mediante el número de accesos al foro de Moodle o mediante el número de contribuciones en el foro, se evalúan competencias como la \emph{comunicación interpersonal} o las \emph{habilidades de escritura}. También se utilizan indicadores obtenidos de documentos Google (\emph{Google Docs}).
 
-El primer trabajo que encontramos en esta parcela es “A web platform for the assessment of competences in Mobile Learning Contexts” ~\cite{rayon2014web}. En él utilizan LACAMOLC, una plataforma web que aporta información visual e informes con indicadores de competencias genéricas de los estudiantes a partir de los registros de actividad. LACAMOLC está implementado sobre Pentaho. Pentaho es una herramienta de análisis de negocio que recoge datos de las bases de datos de los diferentes orígenes, y que mapeará estos datos con los indicadores de las competencias genéricas. Las competencias que se evalúan y los indicadores que se utilizan son:
+El primer trabajo que encontramos que utiliza los registros de actividad de los entornos de aprendizaje es “A web platform for the assessment of competences in Mobile Learning Contexts” ~\cite{rayon2014web}. En él utilizan LACAMOLC, una plataforma web que aporta información visual e informes con indicadores de competencias genéricas de los estudiantes a partir de los registros de actividad. LACAMOLC está implementado sobre Pentaho. Pentaho es una herramienta de análisis de negocio que recoge datos de las bases de datos de los diferentes orígenes, y que mapeará estos datos con los indicadores de las competencias genéricas. Las competencias que se evalúan y los indicadores que se utilizan son:
 
 \begin{itemize}
 \item \emph{Gestión del tiempo}. Indicador: Cumplimiento de la planificación, es decir, número de acciones que se han hecho a tiempo con respecto a la planificación fijada en una hoja de cálculo de Google.
@@ -942,7 +943,7 @@ Estos datos se pueden contrastar con los de la revisión de la literatura mostra
 
 Se han encontrado dos grupos de trabajo, por un lado, aquellos en los que el entorno virtual asiste al usuario en la evaluación de competencias genéricas, y por el otro, aquellos en los que el entorno virtual realiza la evaluación automáticamente. Dentro del primer grupo estos trabajos se dividen en dos subrgrupos dependiendo de quién realice la evaluación: evaluación entre iguales o autoevaluación (cuando la evaluación la realizan los estudiantes) y evaluación del profesor.
 
-Estos grupos se han separado en la categorización final debido al eleveado número de trabajos que hay para cada uno de ellos. Además, las competencias que se evalúan no son las mismas con un enfoque u otro. Mientras que ambos enfoques tienen un número elevado de trabajos que evalúan las competencias de \emph{comunicación} y \emph{trabajo en equipo}, la competencia de \emph{resolución de problema} tiene una presencia mucho más significativa en trabajos en los que evalúa el profesor (5 trabajos) con respecto a trabajos que evalúan los estudiantes (1 trabajo).
+Estos grupos se han separado en la categorización final debido al elevado número de trabajos que hay para cada uno de ellos. Además, las competencias que se evalúan no son las mismas con un enfoque u otro. Mientras que ambos enfoques tienen un número elevado de trabajos que evalúan las competencias de \emph{comunicación} y \emph{trabajo en equipo}, la competencia de \emph{resolución de problema} tiene una presencia mucho más significativa en trabajos en los que evalúa el profesor (5 trabajos) con respecto a trabajos que evalúan los estudiantes (1 trabajo).
 
 La herramienta que más se utiliza tanto en la evaluación del profesor como en la evaluación entre iguales o autoevaluación es las rúbrica electrónica. El problema que encontramos es estos trabajos que utilizan rúbricas es que si el profesor se encarga de la evaluación, la carga de trabajo de éste aumenta~\cite{lacuesta2009active}. Sin embargo, si se delega en la autoevaluación o evaluación entre iguales pueden aparecer discrepancias entre las calificaciones que se auto-asignan los estudiantes y las que realmente merecen~\cite{carreras2013promotion}. 
 
@@ -974,7 +975,11 @@ Puede ver las competencias genéricas evaluadas con cada método en las figuras~
 \bigskip
 \textbf{Q3. ¿Qué técnicas se utilizan para evaluar competencias genéricas a partir de los registros de actividad de un entorno virtual?}
 
-Dentro de los trabajos que utilizan un método de evaluación automática nos encontramos dos que utilizan esta técnica~\cite{rayon2014web,fidalgo:2015}. 
+Dentro de los trabajos que utilizan un método de evaluación automática hay dos trabajos que utilizan los registros de actividad de los entornos virtuales para la evaluación de competencias~\cite{rayon2014web,fidalgo:2015}. 
+
+En~\cite{rayon2014web} se utiliza la técnica ETL (Extract, Transform and Load) mediante el uso de la herramienta Pentaho para obtener los registros de actividad de diversos KLT (Knowledge and Learning Technologies) como Moodle, Google Apps for Education, Mediawiki y Edmondo.
+
+En~\cite{fidalgo:2015} se utilizan técnicas de minería de datos (del inglés, \emph{data mining}) mediante el desarrollo de un servicio web en Moodle que devolviera información almacenada en los registros en la plataforma de aprendizaje.
 
 A continuación se muestra un resumen para estos trabajos en el que se muestra las técnicas empleadas, los métodos aplicados y las competencias evaluadas~\ref{tab:CompetenciasMetodosTecnicas}.
 
@@ -982,20 +987,30 @@ A continuación se muestra un resumen para estos trabajos en el que se muestra l
   \begin{center}
   \begin{tabular}{| c | c | c |}
     \hline
-     \multirow{2}{*}{\textbf{Competencias}} & \textbf{Método} & \textbf{Técnica} \\
+     \multirow{2}{*}{\textbf{Competencias}} & \textbf{Métodos} & \multirow{2}{*}{\textbf{Técnicas}} \\
+    \cline{2-2}
+     &  Evaluación automatizada & \\
+    \hline
+    \hline
+    \multirow{2}{*}{\emph{Análisis}} & \cite{rayon2014web} & \emph{ETL}  \\
     \cline{2-3}
-     & \emph{Evaluación automatizada} & \emph{Learning Analytics}\\
+     &  & \emph{Data Mining} \\
     \hline
+    \multirow{2}{*}{\emph{Comunicación}} & \cite{rayon2014web} & \emph{ETL} \\
+    \cline{2-3}
+     &  & \emph{Data Mining} \\
     \hline
-    \emph{Análisis} & \multicolumn{2}{c|}{ \cite{rayon2014web} }  \\
+    \multirow{2}{*}{\emph{Habilidades interpersonales}} & \cite{rayon2014web} & \emph{ETL} \\
+    \cline{2-3}
+     &  & \emph{Data Mining} \\
     \hline
-    \emph{Comunicación} & \multicolumn{2}{c|}{ \cite{rayon2014web} } \\
+    \multirow{2}{*}{\emph{Planificación}} & \cite{rayon2014web} & \emph{ETL} \\
+    \cline{2-3}
+     &  & \emph{Data Mining} \\
     \hline
-    \emph{Habilidades interpersonales} & \multicolumn{2}{c|}{ \cite{rayon2014web} } \\
-    \hline
-    \emph{Planificación} & \multicolumn{2}{c|}{ \cite{rayon2014web} } \\
-    \hline
-    \emph{Trabajo en equipo} & \multicolumn{2}{c|}{ \cite{rayon2014web,fidalgo:2015} } \\
+    \multirow{2}{*}{\emph{Trabajo en equipo}} & \cite{rayon2014web} & \emph{ETL} \\
+    \cline{2-3}
+     & \cite{fidalgo:2015} & \emph{Data Mining} \\
     \hline
   \end{tabular}
 \end{center}
