listo pre-lectura

--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -600,11 +600,13 @@ author = "Leslie Borjas De Xena"
   publisher={Wiley Online Library}
 }
 
-@article{ruizacarate2013soft,
+@inproceedings{ruizacarate2013soft,
   title={Soft Skills: A Comparative Analysis Between Online and Classroom Teaching},
   author={Ruizac{\'a}rate Varela, Carmen and Garcia Garcia, Maria Jesus and Gonzalez Garcia, Concepcion and Casado Sanchez, Jose Luis},
+ booktitle = {Proceedings of the International Conference on Advanced Education Technology and Management Science (AETMS2013)},
   year={2013},
-  publisher={Montes}
+  pages={359--366},
+  publisher={DEStech Publications}
 }
 
 @article{barbera2011design,
