estado del arte v2

--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -886,6 +886,21 @@ author = "Leslie Borjas De Xena"
 }
 % Fin listado de competencias
 
+@inproceedings{charlier2012not,
+  title={Not just for children: game-based learning for older adults},
+  author={Charlier, Nathalie and Michela, O and Remmele, Bernd and Whitton, Nicola},
+  booktitle={6th European Conference on Games Based Learning, Cork, Ireland},
+  pages={102--108},
+  year={2012}
+}
+
+@book{rojas2008prueba,
+  title={La prueba escrita},
+  author={Rojas-Vargas, Andrea},
+  year={2008},
+  publisher={Ministerio de Educación Pública. Dirección de desarrollo curricular. Departamento de Evaluación de los Aprendizajes}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
