metodologia en la introduccion

--- a/1_introduction/4_estrategia.tex
+++ b/1_introduction/4_estrategia.tex
@@ -8,7 +8,7 @@
 
 %Ver tesis que me ha dejado Juanma
 
-En esta sección primero se justifica y describe la estrategia de investigación que se empleó en esya tesis. En segundo lugar se explica cómo se puso en práctica. Para la explicación dividiremos esta sección en dos subsecciones:
+En esta sección primero se justifica y describe la estrategia de investigación que se empleó en esta tesis. En segundo lugar se explica cómo se puso en práctica. Para la explicación dividiremos esta sección en dos subsecciones:
 
 \begin{itemize}
 \item Diseño y creación
