--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -901,6 +901,15 @@ author = "Leslie Borjas De Xena"
   publisher={Ministerio de Educación Pública. Dirección de desarrollo curricular. Departamento de Evaluación de los Aprendizajes}
 }
 
+@book{oates2006researching,
+  title={Researching information systems and computing},
+  author={Oates, Briony J},
+  year={2005},
+  publisher={Sage},
+  chapter={8},
+  pages={108--124}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
