--- a/dissertation.tex
+++ b/dissertation.tex
@@ -182,7 +182,8 @@
 \include{1_introduction/1_motivation}	
 \include{1_introduction/2_objetivos}	
 \include{1_introduction/3_contexto}	
-\include{1_introduction/4_estrategia}	
+%\include{1_introduction/4_estrategia}	
+\include{1_introduction/5_metodologia}
 
 %: ----------------------- related work ------------------------
 % introduction
