--- a/3_overall_methodology/0_index.tex
+++ b/3_overall_methodology/0_index.tex
@@ -24,6 +24,8 @@ Historical methodology, as I see it, is a product of common sense applied to cir
 
 \cite{turing1950computing}
 
+Este capítulo presenta la metodología propuesta para la evaluación de competencias genéricas.
+
 \section{Como voy a evaluar}
 
 Metolodogía mixta
@@ -33,7 +35,7 @@ Cómo voy a evaluar roles, momentos, actividad, ... lo que sea.
 Explicar el DSL
 
 DSL: herramienta de investigación en evaluaciones. Esta herramienta ayuda al investigador a formalizar la evaluación.
-
+ 
 Enfocar la metodología a que no es una metodología para evaluar, sino para diseñar evaluaciones. Diseñador de evaluaciones.
 
 Explicar qué pasos tiene que seguir un diseñador de evaluaciones para hacer sus evaluaciones.
