cambios estado arte v2

--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -910,6 +910,25 @@ author = "Leslie Borjas De Xena"
   pages={108--124}
 }
 
+@book{gates2015making,
+  title={Teachers Know Best. Making Data Work For Teachers and Students},
+  author={Gates, Foundation},
+  year={2015},
+  publisher={Bill \& Melinda Gates Foundation},
+  url={http://collegeready.gatesfoundation.org/wp-content/uploads/2015/06/TeachersKnowBest-MakingDataWork.compressed.pdf}
+}
+
+@article{chen2010implementation,
+  title={The implementation and evaluation of a mobile self-and peer-assessment system},
+  author={Chen, Chao-hsiu},
+  journal={Computers \& Education},
+  volume={55},
+  number={1},
+  pages={229--236},
+  year={2010},
+  publisher={Elsevier}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
