--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -929,6 +929,81 @@ author = "Leslie Borjas De Xena"
   publisher={Elsevier}
 }
 
+@article{bell2001characteristics,
+  title={The characteristics of formative assessment in science education},
+  author={Bell, Beverley and Cowie, Bronwen},
+  journal={Science education},
+  volume={85},
+  number={5},
+  pages={536--553},
+  year={2001},
+  publisher={Wiley Online Library}
+}
+
+@book{qaa2006quality,
+  title={Code of Practice for the Assurance of Academic Quality and Standards in Higher Education.},
+  author={QAA},
+  year={2006},
+  publisher={The Quality Assurance Agency for Higher Education},
+  url={http://www.qaa.ac.uk}
+}
+
+@book{tyler1967perspectives,
+  title={Perspectives of curriculum evaluation},
+  author={Tyler, Ralph Winfred and Gagn{\'e}, Robert Mills and Scriven, Michael and others},
+  volume={1},
+  year={1967},
+  publisher={Rand McNally Chicago}
+}
+
+@article{gulikers2004five,
+  title={A five-dimensional framework for authentic assessment},
+  author={Gulikers, Judith TM and Bastiaens, Theo J and Kirschner, Paul A},
+  journal={Educational Technology Research and Development},
+  volume={52},
+  number={3},
+  pages={67--86},
+  year={2004},
+  publisher={Springer}
+}
+
+@article{huhta2008diagnostic,
+  title={Diagnostic and Formative Assessment},
+  author={Huhta, Ari},
+  journal={The handbook of educational linguistics},
+  pages={469--483},
+  year={2008},
+  volume={33},
+  publisher={Wiley-Blackwell}
+}
+
+@book{lidz1987dynamic,
+  title={Dynamic assessment: An interactional approach to evaluating learning potential.},
+  author={Lidz, Carol Schneider Ed},
+  year={1987},
+  publisher={Guilford Press}
+}
+
+@inproceedings{dunn2002seeking,
+        author={Dunn, Lee and Morgan, Chris and Parry, Sharon},
+        editor={ },
+        year={2002},
+        title={Seeking quality in criterion referenced assessment},
+        booktitle={Learning Communities and Assessment Cultures Conference organised by the EARLI Special Interest Group on Assessment and Evaluation, University of Northumbria, 28-30 August 2002},
+        url={http://www.leeds.ac.uk/educol/documents/00002257.htm},
+}
+
+@article{hughes2011towards,
+  title={Towards a personal best: a case for introducing ipsative assessment in higher education},
+  author={Hughes, Gwyneth},
+  journal={Studies in Higher Education},
+  volume={36},
+  number={3},
+  pages={353--367},
+  year={2011},
+  publisher={Taylor \& Francis}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
